Fix scrollbar / fullscreen / zen-mode issue

--- a/landing-page/types/alces-branding/content/styles/branding.css
+++ b/landing-page/types/alces-branding/content/styles/branding.css
@@ -128,10 +128,6 @@ body {
     padding-bottom: 1rem;
 }
 
-#main .content {
-    margin-top: 75px;
-}
-
 footer.footer {
     font-size: 14px;
     background-color: black;
@@ -150,6 +146,17 @@ footer.footer .container {
     padding-bottom: 8px;
     display: flex;
     justify-content: center;
+}
+
+/* -----------------------------------------------
+ * Logo
+ * ----------------------------------------------- */
+img.logo {
+    display: block;
+    max-height: 150px;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* -----------------------------------------------
@@ -173,12 +180,18 @@ img.branding-apps-dashboard-logo {
 }
 
 /* -----------------------------------------------
- * Logo
+ * Apps full screen and zen-mode styles
  * ----------------------------------------------- */
-img.logo {
-    display: block;
-    max-height: 150px;
-    max-width: 100%;
-    margin-left: auto;
-    margin-right: auto;
+
+.App .fullscreen-content {
+    /* Subtract header, centernav margin, card header, card border, #main
+     * bottom margin, footer, extra to make things nicer. */
+    height: calc( 100vh - 83px - 24px - 2px - 56px - 16px - 38px - 0px );
+}
+
+html:fullscreen .fullscreen-content,
+body.zen-mode .fullscreen-content {
+    /* Subtract card header, card border, #main top and bottom margins.
+     * extra to make things nicer. */
+    height: calc( 100vh - 56px - 2px - 10px - 10px - 0px );
 }
