--- a/landing-page/types/headnode/content/styles/branding.css
+++ b/landing-page/types/headnode/content/styles/branding.css
@@ -163,3 +163,20 @@ img.branding-landingpage-dashboard-logo { }
 .branding-apps-dashboard-logo-wrapper { }
 img.branding-apps-dashboard-logo { }
 
+
+/* -----------------------------------------------
+ * Apps full screen and zen-mode styles
+ * ----------------------------------------------- */
+
+.App .fullscreen-content {
+    /* Subtract header, centernav margin, card header, card border, #main
+     * bottom margin, footer, extra to make things nicer. */
+    height: calc( 100vh - ( 102px + 41px ) - 24px - 2px - 56px - 16px - 60px - 0px );
+}
+
+html:fullscreen .fullscreen-content,
+body.zen-mode .fullscreen-content {
+    /* Subtract card header, card border, #main top and bottom margins.
+     * extra to make things nicer. */
+    height: calc( 100vh - 56px - 2px - 10px - 10px - 0px );
+}
